--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^3.8.21",
     "morgan": "^1.5.0",
     "passport": "^0.2.1",
+    "passport-github": "^0.1.5",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^1.0.0"
   },
