--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.9.3",
     "express-validator": "^2.8.0",
     "mongoose": "^3.8.21",
+    "mongoose-findorcreate": "^0.1.2",
     "morgan": "^1.5.0",
     "passport": "^0.2.1",
     "passport-github": "^0.1.5",
