--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-handlebars": "^1.1.0",
     "express-session": "^1.9.3",
     "express-validator": "^2.8.0",
+    "github": "^0.2.3",
     "mongoose": "^3.8.21",
     "mongoose-findorcreate": "^0.1.2",
     "morgan": "^1.5.0",
