--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.10.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.3",
+    "exec": "^0.1.3",
     "express": "^4.10.6",
     "express-handlebars": "^1.1.0",
     "express-session": "^1.9.3",
