--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "morgan": "^1.5.0",
     "passport": "^0.2.1",
     "passport-github": "^0.1.5",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "util": "~0.10.3"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
