--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node": "0.10.x"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "body-parser": "^1.10.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.3",
@@ -20,13 +21,16 @@
     "express-session": "^1.9.3",
     "express-validator": "^2.8.0",
     "github": "^0.2.3",
+    "istextorbinary": "^1.0.2",
     "mongoose": "^3.8.21",
     "mongoose-findorcreate": "^0.1.2",
     "morgan": "^1.5.0",
     "passport": "^0.2.1",
     "passport-github": "^0.1.5",
     "passport-local": "^1.0.0",
-    "util": "~0.10.3"
+    "temp": "^0.8.1",
+    "util": "~0.10.3",
+    "walk-sync": "^0.1.3"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
