--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-eslint": "^2.1.0",
+    "grunt-eslint": "^5.1.0",
+    "grunt-githooks": "^0.3.1",
     "grunt-nodemon": "^0.3.0",
-    "grunt-githooks": "^0.3.1"
+    "load-grunt-tasks": "^3.0.0"
   },
   "scripts": {
     "start": "node server.js"
