--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^2.8.0",
     "github": "^0.2.3",
     "istextorbinary": "^1.0.2",
+    "lodash": "^3.4.0",
     "mongoose": "^3.8.21",
     "mongoose-findorcreate": "^0.1.2",
     "morgan": "^1.5.0",
