--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
     "no-ex-assign": 2,
     "no-lonely-if": 2,
     "no-loop-func": 2,
-    "no-mixed-spaces-and-tabs": 2, 
+    "no-mixed-spaces-and-tabs": 2,
+    "no-multi-spaces": 0,
     "no-reserved-keys": 2,
     "no-tabs": 2,
     "no-underscore-dangle": 2,
