--- a/package.json
+++ b/package.json
@@ -34,13 +34,17 @@
     "walk-sync": "^0.1.3"
   },
   "devDependencies": {
+    "chai": "^3.0.0",
     "grunt": "^0.4.5",
     "grunt-eslint": "^5.1.0",
     "grunt-githooks": "^0.3.1",
+    "grunt-mocha-test": "^0.12.7",
     "grunt-nodemon": "^0.3.0",
-    "load-grunt-tasks": "^3.0.0"
+    "load-grunt-tasks": "^3.0.0",
+    "mocha": "^2.2.5"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "grunt"
   }
 }
