--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "body-parser": "^1.10.0",
+    "coffee-script": "^1.9.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.3",
     "exec": "^0.1.3",
@@ -21,6 +22,7 @@
     "express-session": "^1.9.3",
     "express-validator": "^2.8.0",
     "github": "^0.2.4",
+    "glob": "^5.0.13",
     "istextorbinary": "^1.0.2",
     "lodash": "^3.9.3",
     "mongoose": "^3.9.7",
@@ -35,11 +37,15 @@
   },
   "devDependencies": {
     "chai": "^3.0.0",
+    "coffeelint": "^1.10.1",
+    "coffeelint-newline-at-eof": "^0.4.1",
     "grunt": "^0.4.5",
     "grunt-eslint": "^5.1.0",
     "grunt-githooks": "^0.3.1",
     "grunt-mocha-test": "^0.12.7",
     "grunt-nodemon": "^0.3.0",
+    "gulp": "^3.9.0",
+    "gulp-coffeelint": "^0.5.0",
     "load-grunt-tasks": "^3.0.0",
     "mocha": "^2.2.5"
   },
