--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-validator": "^2.8.0",
     "github": "^0.2.4",
     "glob": "^5.0.13",
+    "handlebars": "^3.0.3",
     "istextorbinary": "^1.0.2",
     "lodash": "^3.9.3",
     "mongoose": "^3.9.7",
