--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "async": "^0.9.0",
+    "bcryptjs": "^2.2.0",
     "body-parser": "^1.10.0",
     "coffee-script": "^1.9.3",
     "connect-flash": "^0.1.1",
@@ -32,6 +33,7 @@
     "passport": "^0.2.1",
     "passport-github": "^0.1.5",
     "passport-local": "^1.0.0",
+    "serve-favicon": "^2.3.0",
     "temp": "^0.8.1",
     "util": "~0.10.3",
     "walk-sync": "^0.1.3"
