--- a/package.json
+++ b/package.json
@@ -27,11 +27,10 @@
     "handlebars": "^3.0.3",
     "istextorbinary": "^1.0.2",
     "lodash": "^3.9.3",
-    "mongoose": "^3.9.7",
+    "mongoose": "3.8",
     "mongoose-findorcreate": "^0.1.2",
     "morgan": "^1.5.0",
     "passport": "^0.2.1",
-    "passport-github": "^0.1.5",
     "passport-local": "^1.0.0",
     "serve-favicon": "^2.3.0",
     "temp": "^0.8.1",
