--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "serve-favicon": "^2.3.0",
     "temp": "^0.8.1",
     "util": "~0.10.3",
-    "walk-sync": "^0.1.3"
+    "walk-sync": "^0.1.3",
+    "yamljs": "^0.2.3"
   },
   "devDependencies": {
     "chai": "^3.0.0",
