--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "coffee-script": "^1.9.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.3",
+    "del": "^1.2.0",
     "exec": "^0.1.3",
     "express": "^4.10.6",
     "express-handlebars": "^1.1.0",
@@ -27,6 +28,7 @@
     "handlebars": "^3.0.3",
     "istextorbinary": "^1.0.2",
     "lodash": "^3.9.3",
+    "mkdirp": "^0.5.1",
     "mongoose": "3.8",
     "mongoose-findorcreate": "^0.1.2",
     "morgan": "^1.5.0",
