--- a/package.json
+++ b/package.json
@@ -1,61 +1,62 @@
 {
-  "name": "pennapps-todo",
-  "version": "0.0.1",
-  "description": "todo: add this",
+  "name": "sentry-ci",
+  "version": "0.1.0",
+  "description": "A customizable continous integration server for monitoring code quality.",
   "author": "Ian Sibner",
   "main": "server.js",
   "repository": {
     "type": "git"
   },
   "engines": {
-    "node": "0.10.x"
+    "node": ">= 0.10"
   },
   "dependencies": {
-    "async": "^0.9.0",
-    "bcryptjs": "^2.2.0",
-    "body-parser": "^1.10.0",
-    "coffee-script": "^1.9.3",
-    "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.3.3",
-    "del": "^1.2.0",
-    "exec": "^0.1.3",
-    "express": "^4.10.6",
-    "express-handlebars": "^1.1.0",
-    "express-session": "^1.9.3",
-    "express-validator": "^2.8.0",
-    "github": "^0.2.4",
-    "glob": "^5.0.13",
-    "handlebars": "^3.0.3",
-    "istextorbinary": "^1.0.2",
-    "lodash": "^3.9.3",
-    "mkdirp": "^0.5.1",
+    "async": "0.9.0",
+    "bcryptjs": "2.2.0",
+    "body-parser": "1.10.0",
+    "coffee-script": "1.9.3",
+    "connect-flash": "0.1.1",
+    "cookie-parser": "1.3.3",
+    "del": "1.2.0",
+    "exec": "0.1.3",
+    "express": "4.10.6",
+    "express-handlebars": "1.1.0",
+    "express-session": "1.9.3",
+    "express-validator": "2.8.0",
+    "github": "0.2.4",
+    "glob": "5.0.13",
+    "handlebars": "3.0.3",
+    "istextorbinary": "1.0.2",
+    "lodash": "3.9.3",
+    "mkdirp": "0.5.1",
     "mongoose": "3.8",
-    "mongoose-findorcreate": "^0.1.2",
-    "morgan": "^1.5.0",
-    "passport": "^0.2.1",
-    "passport-local": "^1.0.0",
-    "serve-favicon": "^2.3.0",
-    "temp": "^0.8.1",
+    "mongoose-findorcreate": "0.1.2",
+    "morgan": "1.5.0",
+    "passport": "0.2.1",
+    "passport-local": "1.0.0",
+    "serve-favicon": "2.3.0",
+    "temp": "0.8.1",
     "util": "~0.10.3",
-    "walk-sync": "^0.1.3",
-    "yamljs": "^0.2.3"
+    "walk-sync": "0.1.3",
+    "yamljs": "0.2.3"
   },
   "devDependencies": {
-    "chai": "^3.0.0",
-    "coffeelint": "^1.10.1",
-    "coffeelint-newline-at-eof": "^0.4.1",
-    "grunt": "^0.4.5",
-    "grunt-eslint": "^5.1.0",
-    "grunt-githooks": "^0.3.1",
-    "grunt-mocha-test": "^0.12.7",
-    "grunt-nodemon": "^0.3.0",
-    "gulp": "^3.9.0",
-    "gulp-coffeelint": "^0.5.0",
-    "load-grunt-tasks": "^3.0.0",
-    "mocha": "^2.2.5"
+    "chai": "3.0.0",
+    "coffeelint": "1.10.1",
+    "coffeelint-newline-at-eof": "0.4.1",
+    "grunt": "0.4.5",
+    "grunt-eslint": "5.1.0",
+    "grunt-githooks": "0.3.1",
+    "grunt-mocha-test": "0.12.7",
+    "grunt-nodemon": "0.3.0",
+    "gulp": "3.9.0",
+    "gulp-coffeelint": "0.5.0",
+    "gulp-cslint": "0.0.1",
+    "load-grunt-tasks": "3.0.0",
+    "mocha": "2.2.5"
   },
   "scripts": {
     "start": "node server.js",
-    "test": "grunt"
+    "test": "mocha"
   }
 }
