--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "type": "git"
   },
   "engines": {
-    "node": ">= 0.10"
+    "node": ">= 0.10",
+    "url" : "https://github.com/isibner/sentry"
   },
   "dependencies": {
     "async": "0.9.0",
@@ -18,7 +19,6 @@
     "connect-flash": "0.1.1",
     "cookie-parser": "1.3.3",
     "del": "1.2.0",
-    "exec": "0.1.3",
     "express": "4.10.6",
     "express-handlebars": "1.1.0",
     "express-session": "1.9.3",
@@ -34,25 +34,15 @@
     "morgan": "1.5.0",
     "passport": "0.2.1",
     "passport-local": "1.0.0",
-    "serve-favicon": "2.3.0",
-    "temp": "0.8.1",
-    "util": "~0.10.3",
-    "walk-sync": "0.1.3",
-    "yamljs": "0.2.3"
+    "serve-favicon": "2.3.0"
   },
   "devDependencies": {
     "chai": "3.0.0",
     "coffeelint": "1.10.1",
     "coffeelint-newline-at-eof": "0.4.1",
-    "grunt": "0.4.5",
-    "grunt-eslint": "5.1.0",
-    "grunt-githooks": "0.3.1",
-    "grunt-mocha-test": "0.12.7",
-    "grunt-nodemon": "0.3.0",
     "gulp": "3.9.0",
     "gulp-coffeelint": "0.5.0",
     "gulp-cslint": "0.0.1",
-    "load-grunt-tasks": "3.0.0",
     "mocha": "2.2.5"
   },
   "scripts": {
