Adding plugins section

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "moment": "2.3.x",
     "typogr": "0.5.x",
     "underscore": "1.4.x",
-    "wintersmith-handlebars": "0.0.6"
+    "wintersmith-coffee": "^0.2.2",
+    "wintersmith-handlebars": "0.0.6",
+    "wintersmith-livereload": "^0.2.0"
   },
   "private": "true"
 }
